--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KIOSKO VISION</title>
     <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
     <h1>VISION KIOSKO</h1>
+    <div>
+        <table>
+            <td>
+                <tr>
+                    <button style="margin-left: 50px">
+                        productos
+                    </button>
+                </tr>
+
+
+                <tr>
+                    <button style="margin-left: 50px">
+                        ofertas
+                    </button>
+                </tr>
+
+
+                <tr>
+
+                    <button style="margin-left: 50px">
+                        direccion
+                    </button>
+                </tr>
+
+
+                <tr>
+                    <button style="margin-left: 50px">
+                        horarios
+                    </button>
+                </tr>
+            </td>
+        </table>
+    </div>
 </body>
 
 </html>
