--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 
     <br>
     <div>
+        <h3>DIRECCION</h3>
+        <P>
+            Estamos en el barrio Z1 manzana 23 casa 11
+
+        </P>
+
+
+
         <h3>HORARIOS</h3>
         <p> ESTAMOS DE LUNES A LUNES Lunes</p>
         <p>a viernes de 7am a 11pm sabados y domingos de 7am a 2am</p>
