--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
             </td>
         </table>
     </div>
+
+    <br>
+    <div>
+        <h3>HORARIOS</h3>
+        <p> ESTAMOS DE LUNES A LUNES Lunes</p>
+        <p>a viernes de 7am a 11pm sabados y domingos de 7am a 2am</p>
+
+    </div>
 </body>
 
 </html>
