--- a/index.html
+++ b/index.html
@@ -50,14 +50,42 @@
         <h3>DIRECCION</h3>
         <P>
             Estamos en el barrio Z1 manzana 23 casa 11
-
         </P>
-
+        <img src="C:\Users\IVANCITO\Desktop\proyecto\imagenes\visionkiosko.jpg" alt="imgane del kiosko de frente" id="kioskodefrente">
+        <br><a href="https://tinyurl.com/yhycl92e" target="_blank">haga click aqui para ir a google maps</a>
 
 
         <h3>HORARIOS</h3>
-        <p> ESTAMOS DE LUNES A LUNES Lunes</p>
-        <p>a viernes de 7am a 11pm sabados y domingos de 7am a 2am</p>
+        <p> ESTAMOS DE LUNES A LUNES</p>
+        <p>a viernes de 7am a 11pm sabados y domingos de 7am a 2am</p><br>
+        <p>lunes a viernes</p>
+        <table>
+            <tr>
+                <td>
+                    <p style="margin-left: 50px">7am</p>
+                </td>
+                <td>
+                    <p style="margin-left: 50px">11pm</p>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <td>
+                <tr>
+                    <p>sabados a domingos</p>
+                </tr>
+            </td>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <p style="margin-left: 50px">7am</p>
+                </td>
+                <td>
+                    <p style="margin-left: 50px">2am</p>
+                </td>
+            </tr>
+        </table>
 
     </div>
 </body>
