--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KIOSKO VISION</title>
     <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <style>
+        body {
+            background-color: greenyellow;
+        }
+    </style>
 </head>
 
 <body>
@@ -51,13 +57,13 @@
         <P>
             Estamos en el barrio Z1 manzana 23 casa 11
         </P>
-        <img src="C:\Users\IVANCITO\Desktop\proyecto\imagenes\visionkiosko.jpg" alt="imgane del kiosko de frente" id="kioskodefrente">
+        <img src="imagenes\visionkiosko.jpg" alt="imgane del kiosko de frente" id="kioskodefrente">
         <br><a href="https://tinyurl.com/yhycl92e" target="_blank">haga click aqui para ir a google maps</a>
 
 
         <h3>HORARIOS</h3>
         <p> ESTAMOS DE LUNES A LUNES</p>
-        <p>a viernes de 7am a 11pm sabados y domingos de 7am a 2am</p><br>
+        <p>viernes de 7am a 11pm sabados y domingos de 7am a 2am</p><br>
         <p>lunes a viernes</p>
         <table>
             <tr>
@@ -87,6 +93,46 @@
             </tr>
         </table>
 
+    </div>
+    <div>
+        <table class="table-bordered">
+            <th>
+                producto
+            </th>
+            <th>
+                precio
+            </th>
+            <tr>
+                <td>pico dulce</td>
+            </tr>
+            <tr>
+                <td>hamlet chocolatoso</td>
+            </tr>
+            <tr>
+                <td>chisito pehuamar</td>
+            </tr>
+            <tr>
+                <td>papas fritas pehuamar</td>
+            </tr>
+            <tr>
+                <td>baggio fresh naranja</td>
+            </tr>
+            <tr>
+                <td>baggio fresh pomelo</td>
+            </tr>
+            <tr>
+                <td>galle vainillas</td>
+            </tr>
+            <tr>
+                <td>agua saborizada cellier s/gas pomelo</td>
+            </tr>
+            <tr>
+                <td>agua brio sabor manzana s/gas</td>
+            </tr>
+            <tr>
+                <td>galle 9 de oro rellenas de vainilla naranja</td>
+            </tr>
+        </table>
     </div>
 </body>
 
