--- a/index.html
+++ b/index.html
@@ -21,31 +21,22 @@
         <table>
             <td>
                 <tr>
-                    <button style="margin-left: 50px">
-                        productos
-                    </button>
+                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary"><span class="glyphicon glyphicon-map-marker"></span> UBICACION</a>
                 </tr>
 
 
                 <tr>
-                    <button style="margin-left: 50px">
-                        ofertas
-                    </button>
+                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary">OFERTAS <span class="glyphicon glyphicon-fire"></span></a>
                 </tr>
 
 
                 <tr>
-
-                    <button style="margin-left: 50px">
-                        direccion
-                    </button>
+                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary"><span class="glyphicon glyphicon-usd"></span> PRODUCTOS</a>
                 </tr>
 
 
                 <tr>
-                    <button style="margin-left: 50px">
-                        horarios
-                    </button>
+                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary"><span class="glyphicon glyphicon-calendar"></span> HORARIOS</a>
                 </tr>
             </td>
         </table>
@@ -95,6 +86,7 @@
 
     </div>
     <div>
+        <h3>productos</h3>
         <table class="table-bordered">
             <th>
                 producto
@@ -104,33 +96,127 @@
             </th>
             <tr>
                 <td>pico dulce</td>
+                <td></td>
             </tr>
             <tr>
                 <td>hamlet chocolatoso</td>
+                <td>$65</td>
             </tr>
             <tr>
                 <td>chisito pehuamar</td>
+                <td></td>
             </tr>
             <tr>
                 <td>papas fritas pehuamar</td>
+                <td></td>
             </tr>
             <tr>
                 <td>baggio fresh naranja</td>
+                <td></td>
             </tr>
             <tr>
                 <td>baggio fresh pomelo</td>
+                <td></td>
             </tr>
             <tr>
                 <td>galle vainillas</td>
+                <td></td>
             </tr>
             <tr>
                 <td>agua saborizada cellier s/gas pomelo</td>
+                <td></td>
             </tr>
             <tr>
                 <td>agua brio sabor manzana s/gas</td>
+                <td></td>
             </tr>
             <tr>
                 <td>galle 9 de oro rellenas de vainilla naranja</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle 9 de oro rellenas vainilla</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle 9 de oro tri cho vai</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle rel black</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle polvorita vai frut</td>
+                <td>$70</td>
+            </tr>
+            <tr>
+                <td>pipas girasol</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>shampoo sedal</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>coca botella/retorable</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle saladix</td>
+                <td>$75</td>
+            </tr>
+            <tr>
+                <td>galle surtido bagley</td>
+                <td>$165</td>
+            </tr>
+            <tr>
+                <td>galle traviata</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle 9 de oro agridulce</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>galle 9 de oro saladas</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>lucky convertible box 20</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>lucky convertible box 12</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>red point</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>camel box 20</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>master</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>papel ocb</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>manaos cola</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>manaos pomelo</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>pepitos trio</td>
+                <td></td>
             </tr>
         </table>
     </div>
