--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
     <title>KIOSKO VISION</title>
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <style>
-        body {
-            background-color: greenyellow;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>VISION KIOSKO</h1>
-    <div>
+    <h1 id=nomkiosko>VISION KIOSKO</h1>
+    <div id=botones>
         <table>
             <td>
                 <tr>
@@ -55,34 +50,44 @@
         <h3>HORARIOS</h3>
         <p> ESTAMOS DE LUNES A LUNES</p>
         <p>viernes de 7am a 11pm sabados y domingos de 7am a 2am</p><br>
-        <p>lunes a viernes</p>
-        <table>
+
+        <table class="table-bordered" id=horarios>
+            <th>
+                días
+            </th>
+            <th>
+                HORARIOS
+            </th>
             <tr>
-                <td>
-                    <p style="margin-left: 50px">7am</p>
-                </td>
-                <td>
-                    <p style="margin-left: 50px">11pm</p>
-                </td>
+                <td>LUNES</td>
+                <td>7am-11pm</td>
+            </tr>
+            <tr>
+                <td>MARTES</td>
+                <td>7am-11pm</td>
+            </tr>
+            <tr>
+                <td>MIERCOLES</td>
+                <td>7am-11pm</td>
+            </tr>
+            <tr>
+                <td>JUEVES</td>
+                <td>7am-11pm</td>
+            </tr>
+            <tr>
+                <td>VIERNES</td>
+                <td>7am-11pm</td>
+            </tr>
+            <tr>
+                <td>SABADOS</td>
+                <td>7am-2am</td>
+            </tr>
+            <tr>
+                <td>DOMINGOS</td>
+                <td>7am-2am</td>
             </tr>
         </table>
-        <table>
-            <td>
-                <tr>
-                    <p>sabados a domingos</p>
-                </tr>
-            </td>
-        </table>
-        <table>
-            <tr>
-                <td>
-                    <p style="margin-left: 50px">7am</p>
-                </td>
-                <td>
-                    <p style="margin-left: 50px">2am</p>
-                </td>
-            </tr>
-        </table>
+
 
     </div>
     <div>
