cambio en precios y agregado de js

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 
 <body>
     <h1 id=nomkiosko>VISION KIOSKO</h1>
+    <!--botones de ubicacion ofertas productos horarios-->
     <div id=botones>
         <table>
             <td>
                 <tr>
-                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary"><span class="glyphicon glyphicon-map-marker"></span> UBICACION</a>
+                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary"><span class="glyphicon glyphicon-map-marker">UBICACION</span></a>
                 </tr>
 
 
                 <tr>
-                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary">OFERTAS <span class="glyphicon glyphicon-fire"></span></a>
+                    <a style="margin-left: 50px" href="#" class="btn btn-primary btn-primary"><span class="glyphicon glyphicon-fire"></span>OFERTAS</a>
                 </tr>
 
 
@@ -38,14 +39,15 @@
     </div>
 
     <br>
+    <!--todo lo de direccion y ubicacion del kiosko-->
     <div>
         <h3>DIRECCION</h3>
         <P>
             Estamos en el barrio Z1 manzana 23 casa 11
         </P>
         <img src="imagenes\visionkiosko.jpg" alt="imgane del kiosko de frente" id="kioskodefrente">
-        <br><a href="https://tinyurl.com/yhycl92e" target="_blank">haga click aqui para ir a google maps</a>
-
+        <br>
+        <br><a href="https://tinyurl.com/yhycl92e" class="btn btn-default"><span class="glyphicon glyphicon-map-marker"></span> Ubicacion</a>
 
         <h3>HORARIOS</h3>
         <p> ESTAMOS DE LUNES A LUNES</p>
@@ -90,6 +92,7 @@
 
 
     </div>
+    <!--listado de productos del kiosko-->
     <div>
         <h3>productos</h3>
         <table class="table-bordered">
@@ -157,11 +160,11 @@
             </tr>
             <tr>
                 <td>pipas girasol</td>
-                <td></td>
+                <td>$25</td>
             </tr>
             <tr>
                 <td>shampoo sedal</td>
-                <td></td>
+                <td>$200</td>
             </tr>
             <tr>
                 <td>coca botella/retorable</td>
@@ -222,6 +225,38 @@
             <tr>
                 <td>pepitos trio</td>
                 <td></td>
+            </tr>
+            <tr>
+                <td>Papel higenico el coloso </td>
+                <td>$90</td>
+            </tr>
+            <tr>
+                <td>rompe muelas</td>
+                <td>$10</td>
+            </tr>
+            <tr>
+                <td>fizz</td>
+                <td>$20</td>
+            </tr>
+            <tr>
+                <td>Cofler Air</td>
+                <td>$85</td>
+            </tr>
+            <tr>
+                <td>georgallos</td>
+                <td>$60</td>
+            </tr>
+            <tr>
+                <td>macucas</td>
+                <td>$80</td>
+            </tr>
+            <tr>
+                <td>lincon</td>
+                <td>$100</td>
+            </tr>
+            <tr>
+                <td>manas</td>
+                <td>$120</td>
             </tr>
         </table>
     </div>
