agregado del logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <h1 id="nomkiosko" class="text-center">kiosko vision</h1>
+    <img src="imagenes/logo kiosko.jpg" alt="logo del kiosko" id="logo-kiosko">
+    <br>
     <div id="botones">
         <table>
             <td>
