arreglo de boton productos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
                 <tr>
-                    <a style="margin-left: 50px" href="#Producto" class="btn btn-danger"><span class="glyphicon glyphicon-usd"></span> PRODUCTOS</a>
+                    <a style="margin-left: 50px" href="#Productos" class="btn btn-danger"><span class="glyphicon glyphicon-usd"></span> PRODUCTOS</a>
                 </tr>
 
 
