agregado de comentarios

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="shortcut icon" href="imagenes/logo kiosko.jpg" type="image/ico" />
 </head>
 <body>
+    <!--titulos de pag y logo del kiosko-->
     <h1 id="nomkiosko" class="text-center">kiosko vision</h1>
     <img src="imagenes/logo kiosko.jpg" alt="logo del kiosko" id="logo-kiosko">
     <br>
+    <!--botones iniciales-->
     <div id="botones">
         <table>
             <td>
@@ -268,6 +270,7 @@
             </tr>
         </table>
     </div>
+    <!--pie de pagina-->
     <div  id="pie-pag"class="container-fluid  text-center p-3">
         <p>telefono de contacto: 2996346537</p>
         <p class="small">&copy; todos los derechos reservados :: vision kiosko :: Argentina 2021 </p>
