terminacion de precios y animacion

--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <link rel="shortcut icon" href="imagenes/logo kiosko.jpg" type="image/ico" />
 </head>
 <body>
+
     <!--titulos de pag y logo del kiosko-->
-    <h1 id="nomkiosko" class="text-center">kiosko vision</h1>
+    <p id="nomkiosko">
+    <h1 id="nomkiosko" class="text-center">kiosko vision</h1></p>
     <img src="imagenes/logo kiosko.jpg" alt="logo del kiosko" id="logo-kiosko">
     <br>
     <!--botones iniciales-->
+    
+
+
+
     <div id="botones">
         <table>
             <td>
@@ -54,7 +60,9 @@
         <br>
         <img src="imagenes/kiosko2.jpg" alt="imagenes del kisko con gente" id="kioskodefrente3">
         <br>
-    <a href="https://tinyurl.com/yhycl92e" class="btn btn-default" id="boton-ubicacion"><span class="glyphicon glyphicon-map-marker"></span> ubicacion</a>
+    <a href="https://tinyurl.com/yhycl92e" class="btn btn-default" id="boton-ubicacion"><span class="glyphicon glyphicon-map-marker"></span><h4>ubicación</h4></a>
+    <h6>(presione aqui)</h6>
+    <br>
     <a name="Horarios"></a>
     <div id="horarios">
         
@@ -113,8 +121,8 @@
                 precio
             </th>
             <tr>
-                <td>pico dulce</td>
-                <td></td>
+                <td>pico dulce grande</td>
+                <td>$30</td>
             </tr>
             <tr>
                 <td>hamlet chocolatoso</td>
@@ -122,47 +130,47 @@
             </tr>
             <tr>
                 <td>chisito pehuamar</td>
-                <td></td>
+                <td>$95 los 100 gramos</td>
             </tr>
             <tr>
                 <td>papas fritas pehuamar</td>
-                <td></td>
+                <td>$95 los 100 gramos</td>
             </tr>
             <tr>
                 <td>baggio fresh naranja</td>
-                <td></td>
+                <td>$130</td>
             </tr>
             <tr>
                 <td>baggio fresh pomelo</td>
-                <td></td>
+                <td>$130</td>
             </tr>
             <tr>
                 <td>galle vainillas</td>
-                <td></td>
+                <td>$100</td>
             </tr>
             <tr>
                 <td>agua saborizada cellier s/gas pomelo</td>
-                <td></td>
+                <td>$90</td>
             </tr>
             <tr>
                 <td>agua brio sabor manzana s/gas</td>
-                <td></td>
+                <td>$90</td>
             </tr>
             <tr>
-                <td>galle 9 de oro rellenas de vainilla naranja</td>
-                <td></td>
+                <td>galle 9 de oro rellenas de vainilla</td>
+                <td>$90</td>
             </tr>
             <tr>
                 <td>galle 9 de oro rellenas vainilla</td>
-                <td></td>
+                <td>$90</td>
             </tr>
             <tr>
                 <td>galle 9 de oro tri cho vai</td>
-                <td></td>
+                <td>$90</td>
             </tr>
             <tr>
-                <td>galle rel black</td>
-                <td></td>
+                <td>galle rex</td>
+                <td>$130</td>
             </tr>
             <tr>
                 <td>galle polvorita vai frut</td>
@@ -178,7 +186,7 @@
             </tr>
             <tr>
                 <td>coca botella/retorable</td>
-                <td></td>
+                <td>$170</td>
             </tr>
             <tr>
                 <td>galle saladix</td>
@@ -190,51 +198,51 @@
             </tr>
             <tr>
                 <td>galle traviata</td>
-                <td></td>
+                <td>$70</td>
             </tr>
             <tr>
                 <td>galle 9 de oro agridulce</td>
-                <td></td>
+                <td>$90</td>
             </tr>
             <tr>
                 <td>galle 9 de oro saladas</td>
-                <td></td>
+                <td>$90</td>
             </tr>
             <tr>
                 <td>lucky convertible box 20</td>
-                <td></td>
+                <td>$240</td>
             </tr>
             <tr>
                 <td>lucky convertible box 12</td>
-                <td></td>
+                <td>$150</td>
             </tr>
             <tr>
                 <td>red point</td>
-                <td></td>
+                <td>$130</td>
             </tr>
             <tr>
                 <td>camel box 20</td>
-                <td></td>
+                <td>$260</td>
             </tr>
             <tr>
                 <td>master</td>
-                <td></td>
+                <td>$130</td>
             </tr>
             <tr>
-                <td>papel ocb</td>
-                <td></td>
+                <td>papelillo ocb (caja)</td>
+                <td>$100</td>
             </tr>
             <tr>
                 <td>manaos cola</td>
-                <td></td>
+                <td>$130</td>
             </tr>
             <tr>
                 <td>manaos pomelo</td>
-                <td></td>
+                <td>$130</td>
             </tr>
             <tr>
                 <td>pepitos trio</td>
-                <td></td>
+                <td>$150</td>
             </tr>
             <tr>
                 <td>Papel higenico el coloso </td>
