--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="shortcut icon" href="imagenes/logo kiosko.jpg" type="image/ico" />
+    <script src="js/Script.js"></script>
 </head>
 <body>
 
@@ -61,7 +62,7 @@
         <img src="imagenes/kiosko2.jpg" alt="imagenes del kisko con gente" id="kioskodefrente3">
         <br>
     <a href="https://tinyurl.com/yhycl92e" class="btn btn-default" id="boton-ubicacion"><span class="glyphicon glyphicon-map-marker"></span><h4>ubicación</h4></a>
-    <h6>(presione aqui)</h6>
+    <h6>(presione ubicacion)</h6>
     <br>
     <a name="Horarios"></a>
     <div id="horarios">
