agregado de mapa

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
         <br>
         <img src="imagenes/kiosko2.jpg" alt="imagenes del kisko con gente" id="kioskodefrente3">
         <br>
-    <a href="https://tinyurl.com/yhycl92e" class="btn btn-default" id="boton-ubicacion"><span class="glyphicon glyphicon-map-marker"></span><h4>ubicación</h4></a>
-    <h6>(presione ubicacion)</h6>
-    <br>
+        <a href="https://tinyurl.com/yhycl92e" class="btn btn-default" id="boton-ubicacion"><span class="glyphicon glyphicon-map-marker"></span><h4>ubicación</h4></a>
+        <h6>(presione ubicacion)</h6>
+        <br>
+    </div>
     <a name="Horarios"></a>
     <div id="horarios">
         
