--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <br>
         <img src="imagenes/kiosko2.jpg" alt="imagenes del kisko con gente" id="kioskodefrente3">
         <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1955.4653324059366!2d-68.13733997810348!3d-38.9215171450173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzjCsDU1JzE3LjQiUyA2OMKwMDgnMDkuMSJX!5e0!3m2!1ses!2sar!4v1629040838993!5m2!1ses!2sar" width="400" height="300" style="border: 0;" allowfullscreen="" loading="lazy" id="mapas"></iframe>
         <a href="https://tinyurl.com/yhycl92e" class="btn btn-default" id="boton-ubicacion"><span class="glyphicon glyphicon-map-marker"></span><h4>ubicación</h4></a>
         <h6>(presione ubicacion)</h6>
         <br>
