agregado de Ofertas

--- a/index.html
+++ b/index.html
@@ -281,6 +281,13 @@
             </tr>
         </table>
     </div>
+    <BR></BR>
+    <!--ofertas-->
+    <a name="Ofertas"></a>
+    <div>
+        <h3>OFERTAS</h3>
+        <p>2 CERVEZAS $230 HASTA LAS 12PM</p>
+    </div>
     <!--pie de pagina-->
     <div  id="pie-pag"class="container-fluid  text-center p-3">
         <p>telefono de contacto: 2996346537</p>
