Boton de Whatsapp

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KIOSKO VISION</title>
+    <link rel="stylesheet" href="css/whatsapp.css">
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="shortcut icon" href="imagenes/logo kiosko.jpg" type="image/ico" />
     <script src="js/Script.js"></script>
 </head>
 <body>
-
+    <!--boton de whatsapp-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=2996346537&text=Hola Bienvenido al whatsapp de kiosko vision." class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
     <!--titulos de pag y logo del kiosko-->
     <p id="nomkiosko">
     <h1 id="nomkiosko" class="text-center">kiosko vision</h1></p>
@@ -54,7 +59,7 @@
     <div id="ubicacion">
         <h3>DIRECCION</h3>
         <P>
-           Hola clientes y vecinos le damos la bienvenida ala pagina del kiosko vicion 
+           Hola clientes y vecinos le damos la bienvenida ala pagina del kiosko vision 
         </P> 
         <p>
           Estamos en el barrio Z1 manzana 23 casa 11
