--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
         <h3>OFERTAS</h3>
         <br>
         <p>modeneas de oro 4x $100</p>
-        <img src="#" alt="#">
+        <img src="" alt="#">
         <br>
         <p>4 alfajores vimar escolar x $100</p>
         <img src="#" alt="#">
         <br>
         <p>3 alfajores vimar x $100 </p>
-        <img src="#" alt="#">
+        <img src="imagenes/oferta3.jpg" height="300px" width="200px" id="kioskoimagen3">
         <br>
         <p>4 alfajores vimar + 1 levite de 300 ml x $150</p>
         <img src="#" alt="#">
@@ -321,10 +321,22 @@
         <p>1 alfajor triple + 1 agua saborizada de manzana de 300 ml x $85</p>
         <img src="#" alt="#">
     </div>
+
+   
+
+
+
+
+
+
     <!--pie de pagina-->
+    <footer>
     <div  id="pie-pag"class="container-fluid  text-center p-3">
         <p>telefono de contacto: 2996346537</p>
         <p class="small">&copy; todos los derechos reservados :: vision kiosko :: Argentina 2021 </p>
+        
+        <a href="https://tinyurl.com/yhycl92e"><img src="https://cdn.discordapp.com/attachments/726139117980876800/885179649573941318/descarga.png" width="110px" height="100px"></a>
     </div>
+    </footer>
 </body>
 </html>
