--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>KIOSKO VISION</title>
     <link rel="stylesheet" href="css/whatsapp.css">
     <link rel="stylesheet" href="css\style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css//Bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.rtl.min.css.map">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.rtl.min.css">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.rtl.css.map">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.rtl.css">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.min.css.map">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.css.map">
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.css">
     <link rel="shortcut icon" href="imagenes/logo kiosko.jpg" type="image/ico" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="js/Script.js"></script>
@@ -19,14 +28,14 @@
         <a href="https://api.whatsapp.com/send?phone=2996346537&text=Hola Bienvenido al whatsapp de kiosko vision." class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
         </a>
-        <div class="parent">
-            <div class="div1">
+        <div class="total">
+            <div class="Header">
                 <a name="Inicio"></a>
                 <p id="nomkiosko">
                 <h1 id="nomkiosko" class="text-center">kiosko vision</h1></p>
                 <img src="imagenes/logo kiosko.jpg" alt="logo del kiosko" id="logo-kiosko">
             </div>
-            <div class="div2"> 
+            <div class="menu_flotante"> 
                 <nav id='menu'>
                     <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
                     <ul>
@@ -38,7 +47,7 @@
                     </ul>
                   </nav> 
             </div>
-            <div class="div3" id="ubicacion"> 
+            <div class="direccion" id="ubicacion"> 
                 <a name="Direccion"></a>
                 <h3>DIRECCION</h3>
                 <P>
@@ -56,7 +65,7 @@
                 <img src="imagenes/kiosko2.jpg" alt="imagenes del kisko con gente" id="kioskodefrente3">
                 <br>
             </div>
-            <div class="div4"> 
+            <div class="horarios"> 
                 <a name="Horarios" id="horarios"></a>
                 <h3>HORARIOS</h3>
                 <p> ESTAMOS DE LUNES A LUNES</p>
@@ -100,7 +109,7 @@
                 </table>
                 <br>
             </div>
-            <div class="div5" id="productos"> 
+            <div class="productos" id="productos"> 
                 <a name="Productos"></a>
                 <h3>productos</h3>
                 <table class="table-bordered">
@@ -268,7 +277,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="div6"> 
+            <div class="ofertas"> 
                 <a name="Ofertas"></a>
                 <h3>OFERTAS</h3>
                 <br>
@@ -292,7 +301,7 @@
                 <br>
                 <p>1 alfajor triple + 1 agua saborizada de manzana de 300 ml x $85</p> 
             </div>
-            <div class="div7"> 
+            <div class="pie_pag"> 
                 <footer id="pie-pag"class="container-fluid  text-center p-3">
                     <p>telefono de contacto: 2996346537</p>
                     <p class="small">&copy; todos los derechos reservados :: vision kiosko :: Argentina 2021 </p>
