Acomodo de css y arreglo 2.0 de barra  I Y F

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.css.map">
     <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/MenuFlotante.css">
+    <link rel="stylesheet" href="css/Mapeo.css">
     <link rel="shortcut icon" href="imagenes/logo kiosko.jpg" type="image/ico" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="js/Script.js"></script>
+    <script src="https://kit.fontawesome.com/c6b80c45d3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -33,7 +36,9 @@
                 <a name="Inicio"></a>
                 <p id="nomkiosko">
                 <h1 id="nomkiosko" class="text-center">kiosko vision</h1></p>
-                <img src="imagenes/logo kiosko.jpg" alt="logo del kiosko" id="logo-kiosko">
+                <div class="logoKiosko">
+                    <img src="imagenes/logo kiosko.jpg" alt="logo del kiosko">
+                </div>
             </div>
             <div class="menu_flotante"> 
                 <nav id='menu'>
@@ -303,10 +308,15 @@
             </div>
             <div class="pie_pag"> 
                 <footer id="pie-pag"class="container-fluid  text-center p-3">
-                    <p>telefono de contacto: 2996346537</p>
+                    <p>telefono de contacto: 2996346537 </p>
+                    <a href="https://tinyurl.com/yhycl92e">
+                    <div>
+                    <i class="fas fa-map-marked-alt">
+
+                    </i>
+                    </div>
+                    </a>
                     <p class="small">&copy; todos los derechos reservados :: vision kiosko :: Argentina 2021 </p>
-                    
-                    <a href="https://tinyurl.com/yhycl92e"><img src="https://cdn.discordapp.com/attachments/726139117980876800/885179649573941318/descarga.png" width="110px" height="100px"></a>
                     </footer>
             </div>
         </div>
